<resources>
    <string name="app_name">SOSAS</string>
    <string name="btnSync">Sync</string>
    <string name="btnUpload">Upload</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="taheading">SECTION A: HH Identification</string>
    <string name="ta01"> Cluster Number </string>
    <string name="ta02"> Cluster type </string>
    <string name="ta02a"> LHW Covered </string>
    <string name="ta02b"> LHW UnCovered </string>
    <string name="ta02c"> LHW Partially Covered </string>
    <string name="ta03"> Name of Tehsil/Taluka </string>
    <string name="ta03a"> Tando Mohammad Khan </string>
    <string name="ta03b"> Tando Ghulam Hyder </string>
    <string name="ta03c"> Bulri Shah Karim </string>
    <string name="ta04"> Name of Union Council </string>
    <string name="ta04a"> Lakhat </string>
    <string name="ta04b"> Shaikh Bhirkio </string>
    <string name="ta04c"> Tando Saeendad </string>
    <string name="ta04d"> TMK 01 </string>
    <string name="ta04e"> TMK 02 </string>
    <string name="ta04f"> TMK 03 </string>
    <string name="ta04g"> Dando </string>
    <string name="ta04h"> Ghulam Shah Bagrani </string>
    <string name="ta04i"> Nazarpur </string>
    <string name="ta04j"> Tando Ghulam Hyder </string>
    <string name="ta04k"> Allah Yar Turk </string>
    <string name="ta04l"> Jinhan Soomro </string>
    <string name="ta04m"> Bulri Shah Karim </string>
    <string name="ta04n"> Saeed Khan Lund </string>
    <string name="ta04o"> Mullakatiar </string>
    <string name="ta04p"> Saeed Matto </string>
    <string name="ta04q"> Saeedpur </string>
    <string name="ta05"> House No </string>
    <string name="ta05h"> House No </string>
    <string name="ta05kh"> Khandan number </string>
    <string name="ta05u"> Gas or electricity bill No </string>
    <string name="ta06"> Village </string>
    <string name="ta07"> Block/mohalla </string>
    <string name="ta08"> Street </string>
    <string name="ta09"> ڇا ھاڻي آءٌ انٽرويو شروع ڪري سگھان ٿي/ٿو؟ </string>
    <string name="ta09c"> گھرو آف / اجازت دستياب ناهي. </string>
    <string name="tc03"> جواب ڏيڻ واري جو نالو. </string>
    <string name="tc04"> جواب ڏيڻ واري جي جنس. </string>
    <string name="tc05"> جواب ڏيندڙ جي عمر. </string>
    <string name="ta10"> Is there any under 5 child exist? </string>
    <string name="ta11"> Total under 5 child? </string>
    <string name="dialogCheck">کیا آپ منتخب کئیے گئے بچے کے بارے میں اسکرین پر ظاہر کی گئی معلومات کے درست ہونے کی تصدیق کرتے ہیں؟</string>
    <string name="uc">UC</string>
    <string name="Section1"> شناخت کی معلومات </string>
    <string name="studyId"> ANISA Stydy ID </string>
    <string name="RSID"> شُرکا کا شناختی نمبر # </string>
    <string name="RS7">1.11: ماں کا موجودہ شناختی آئی ڈی </string>
    <string name="RS8">1.12: ماں کا مستقل شناختی آئی ڈی </string>
    <string name="num78"> شناختی نمبر </string>
    <string name="RS9">1.13 بچے کا نام </string>
    <string name="RS10">1.14 ماں کا نام </string>
    <string name="RS11">1.15 والد کا نام </string>
    <string name="RS12">1.16 گھر کے سربراہ کا نام </string>
    <string name="RS13"> بچے کی تاریخِ پیدایش </string>
    <string name="RS14"> بچے کی عمر (مہینے) </string>
    <string name="RS15"> وِزِٹ کی تاریخ </string>
    <string name="RS16"> کیا گھر اور بچے کی شناخت ہوگئی ہے؟ </string>
    <string name="RS16a"> ہاں گھر اور بچے کی شناخت ہوگی ہے </string>
    <string name="RS16b">   نہیں گھر پر کوئی موجود نہیں ہے    </string>
    <string name="RS16d"> گھر  تبدیل کر لیا گیا ہے  </string>
    <string name="RS16e"> ڈی ایس ایس آئیڈی درست نہیں ہے   </string>
    <string name="RS16c"> گھر پر تالا لگا ہوا ہے  </string>
    <string name="Section2"> رضاکارانہ طور پر دیکھ بھال کرنے والا </string>
    <string name="RS17">2.01: ماں یا دیکھ بھال کرنے والے نے مطالعے میں حصہ لینے کے بارے میں مطمئن رضامندی دی ہے </string>
    <string name="RS18">2.02: رضامندی فراہم نہ کرنے کی وجہ؟ </string>
    <string name="RS18a"> دلچسپی نہیں ہے </string>
    <string name="RS18b"> مصروفیت </string>
    <string name="RS18c"> مطالعہ کے طریقہ کار سے مطمئن نہیں </string>
    <string name="RS18d"> کسی بھی وجہ کا ذکر کرنے سے انکار </string>
    <string name="RS18e"> گھر میں کوئی بھی موجود نہیں </string>
    <string name="RS18f"> بچے کی نشاندہی نہیں ہوئی </string>
    <string name="RS19">2.03: (رضامندی ملنے کی صورت میں) دیکھ بھال کرنے والا / جواب دینے والا شخص کون ہے؟ </string>
    <string name="RS19a"> ماں </string>
    <string name="RS19b"> دادی </string>
    <string name="RS19c"> آنٹی </string>
    <string name="RS19d"> بہن </string>
    <string name="RS19e"> والد </string>
    <string name="RS19f"> دادا </string>
    <string name="RS19g"> انکل </string>
    <string name="RS19h"> بھائی </string>
    <string name="RS1996"> دیگر </string>
    <string name="RS20">2.04: ماں کیوں جواب دہ نہیں تھی؟ </string>
    <string name="RS20a">  وہ حیات نہیں ہیں </string>
    <string name="RS20b"> وہ دوسرے شہر منتقل ہوگئی ہے </string>
    <string name="RS20c"> وہ اس قابل نہیں ہے </string>
    <string name="RS20d"> مسلسل غیر حاظر ہے </string>
    <string name="RS20e"> وہ گھر پر موجود نہیں ہے </string>
    <string name="RS2096"> دیگر </string>
    <string name="RS21">2.05: کیا بچہ زندہ ہے </string>
    <string name="RS21a">  ہاں، اب بھی زندہ ہے </string>
    <string name="RS21b">  نہیں، بچہ مر چکا ہے </string>
    <string name="RS22">2.06: بچے کی تاریخ وفات کیا ہے؟ </string>
    <string name="Section3"> گھریلو معلومات </string>
    <string name="RS24">3.01: کتنے عرصے سے آپ اس گھر میں رہ رہے ہیں؟ </string>
    <string name="RS25">3.02: گھر میں کتنے افراد ہیں؟ </string>
    <string name="RS26">3.03: گھر میں سونے کے لیے کتنے کمرے ہیں؟ </string>
    <string name="RS27">3.04: گھر کی چھت کو دیکھیں اور نوٹ کریں کہ چھت کا بنیادی مواد کیا ہے؟ </string>
    <string name="RS27h1"> قدرتی چھت سازی </string>
    <string name="RS271"> چھت نہیں ہے </string>
    <string name="RS272"> اسچ چھت / کھجور کے درخت کے پتے/ ریڈ /  گھاس </string>
    <string name="RS273"> مٹی </string>
    <string name="RS274"> سوڈ / مٹی اور گھاس کا مرکب </string>
    <string name="RS275"> پی لکڑی </string>
    <string name="RS27h2"> بنیادی چھت سازی </string>
    <string name="RS276"> رسٹک چٹائی </string>
    <string name="RS277"> بانس </string>
    <string name="RS278"> خام لکڑی کا تختہ / لکڑی / گتے </string>
    <string name="RS279"> شیٹنگ / پلاسٹک Polyethylene  </string>
    <string name="RS2710"> اینٹیں / Unburnt  </string>
    <string name="RS2711"> جمع کئے گئے پتھر </string>
    <string name="RS27h3"> مکمل تیار شدہ چھت </string>
    <string name="RS2712"> میٹل / جی آئی یا آئرن شیٹ / ٹِن  </string>
    <string name="RS2713"> تیار شدہ لکڑی </string>
    <string name="RS2714"> کیلامین / سیمنٹ فائبر </string>
    <string name="RS2715"> اسبسٹوس شیٹ </string>
    <string name="RS2716"> مضبوط اینٹ  سیمنٹ / آرسیسی / کنکریٹ </string>
    <string name="RS2717"> روف شنگلز </string>
    <string name="RS2718"> ٹائلیں </string>
    <string name="RS2719"> سلیٹ </string>
    <string name="RS2720"> برنٹ برک </string>
    <string name="RS27x"> دیگر (وضاحت کریں) </string>
    <string name="RS28">3.05: گھر کے فرش کو دیکھیں اور نوٹ کریں کہ فرش کا بنیادی مواد کیا ہے؟ </string>
    <string name="RS28h1"> قدرتی فرش </string>
    <string name="RS281"> گیلی مٹی / مٹی / زمین / ریت </string>
    <string name="RS282"> ڈنگ </string>
    <string name="RS283"> ابتدائی خام لکڑی کا تختہ </string>
    <string name="RS284"> پام / بانس </string>
    <string name="RS285"> سیمنٹ / چونے کے بغیر اینٹ </string>
    <string name="RS286"> سیمنٹ / چونے کے بغیر پتھر </string>
    <string name="RS28h2"> مکمل تیار شدہ فرش </string>
    <string name="RS287"> لکڑی / پالش لکڑی </string>
    <string name="RS288"> ونایل / اسفالٹ  </string>
    <string name="RS289"> سیرامک ٹائلز  </string>
    <string name="RS2810"> سیمنٹ </string>
    <string name="RS2811"> چپس / ٹریرازو / موزیک </string>
    <string name="RS2812"> قالین / چٹائی </string>
    <string name="RS2813"> پالش پتھر / ماربل / گرینٹ </string>
    <string name="RS28x"> دیگر (وضاحت کریں) </string>
    <string name="RS29">3.06: گھر کے باہر کی دیواروں کو دیکھیں اور نوٹ کریں کہ دیواروں کا بنیادی مواد کیا ہے؟ </string>
    <string name="RS29h1"> قدرتی دیوار </string>
    <string name="RS291"> دیوار نہیں ہے </string>
    <string name="RS292"> کین / پام / ٹرنک / بانس </string>
    <string name="RS293"> گندگی /  گیلی مٹی </string>
    <string name="RS294"> پتھر </string>
    <string name="RS295"> گھاس / ریڈ / تھیچ / لکڑیاں </string>
    <string name="RS29h2"> ابتدائی دیوار </string>
    <string name="RS296">بانس کے ساتھ مٹی   </string>
    <string name="RS297"> پتھر کے ساتھ مٹی </string>
    <string name="RS298"> پلائیووڈ </string>
    <string name="RS299"> گتے / پلاسٹک </string>
    <string name="RS2910"> سورج بوم اینٹیں </string>
    <string name="RS2911"> خام لکڑی / استعمال شدہ لکڑی </string>
    <string name="RS29h3"> مکمل تیار شدہ دیوار </string>
    <string name="RS2912"> سیمنٹ / کُنکریٹ </string>
    <string name="RS2913"> چونے کے ساتھ پتھر / سیمنٹ </string>
    <string name="RS2914"> چونے کے ساتھ اینٹیں / سیمنٹ </string>
    <string name="RS2915"> مکمل لکڑی کے تختے / شنگلز </string>
    <string name="RS2916"> سیمنٹ بلاکس </string>
    <string name="RS2917"> میٹل / جی آئی یا آئرن شیٹ / ٹن / اسبسٹسوس شیٹ </string>
    <string name="RS29x"> دیگر وضاحت کریں </string>
    <string name="RS30">3.07: گھر کے افراد کے لئے پینے کے پانی کا بنیادی ذریعہ کیا ہے؟ </string>
    <string name="RS301"> پائپ </string>
    <string name="RS302"> ٹیوب / دستی پمپ  </string>
    <string name="RS303"> سپرنگ یا کنویں کا پانی   </string>
    <string name="RS304"> بارش کا پانی  </string>
    <string name="RS305"> واٹر ٹینکر / ٹوکری </string>
    <string name="RS306"> سطح </string>
    <string name="RS307"> بوتل </string>
    <string name="RS30x"> دیگر وضاحت کریں </string>
    <string name="RS31">3.08: عام طور پر خاندان کے افراد کس قسم کے ٹوائلٹ سہولت کا استعمال کرتے ہیں؟ </string>
    <string name="RS31h1"> فلش ٹوائلٹ </string>
    <string name="RS311"> پائپ شدہ سیور کا نظام میں فلش </string>
    <string name="RS312"> سیپٹک ٹینک میں فلش </string>
    <string name="RS313"> گھڑا ٹوائلٹ میں فلش </string>
    <string name="RS314"> کہیں اور فلش کرنا </string>
    <string name="RS315"> فلش، پتہ نہیں کہاں </string>
    <string name="RS31h2"> گڑھا ٹوائلٹ  </string>
    <string name="tdh"> SECTION D: Surgeons Overseas Assessment of Surgical Need (SOSAS) </string>
    <string name="td01"> گذريل پنجن سالن جي دوران توهان جي ڪنهن ٻار جي وفات ٿي؟ </string>
    <string name="td02"> جيڪڏهن ها ته مون کي اهو ٻڌي تمام گهڻو افسوس ٿيو، گذريل پنجن سالن جي دوران توهان جي گهر ۾ ڪيترن ٻارن جي وفات ٿي؟ </string>
    <string name="td02a"> ٻارن جو تعداد </string>
    <string name="teh"> EYES اکيون </string>
    <string name="te03"> توهان جي (ٻار جو نالو) کي ڪڏهن اکين ۾ زخم، سڙڻ، ڳڙ، نقص، نظرجو يا اهڙو ڪو ٻيو مسئلو ٿيو آهي؟ </string>
    <string name="te03a"> ھا </string>
    <string name="te03b"> نه </string>
    <string name="te04"> اهڙو مسئلو ان سان ڪيترا دفعا ٿيو؟ </string>
    <string name="end_interview"> اختتام </string>
    <string name="start_interview"> انٹرویو شروع کریں </string>
    <string name="nextSection"> اگلا حصہ </string>
    <string name="yes"> ھا </string>
    <string name="no"> نه </string>
    <string name="ed_letterOnly">QWERTYUIOPASDFGHJKLZXCVBNM qwertyuiopasdfghjklzxcvbnm</string>
</resources>