<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SectionCActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.uen_sosas.ui.SectionCActivity" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sosas_bg"
        android:layoutDirection="rtl"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/ll03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/HeadingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teh" />

            <!--Radio Button Te03-->
            <android.support.v7.widget.CardView
                android:id="@+id/te03cv"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/te03" />

                    <RadioGroup
                        android:id="@+id/te03"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/te03a"
                            style="@style/radiobutton"
                            android:text="@string/te03a" />

                        <RadioButton
                            android:id="@+id/te03b"
                            style="@style/radiobutton"
                            android:text="@string/te03b" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--Edit Text Te04-->
            <android.support.v7.widget.CardView
                android:id="@+id/te04cv"
                style="@style/cardView">

                <LinearLayout
                    android:id="@+id/te04sos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility='@{te03b.checked? View.GONE : View.VISIBLE}'>

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/te04" />

                    <EditText
                        android:id="@+id/te04"
                        style="@style/textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/ed_letterOnly"
                        android:hint="@string/te04"
                        android:tag="td04" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:onClick='@{() -> callback.BtnContinue()}'
                    android:text="@string/start_interview"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility='visible' />

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_light"
                    android:onClick='@{() -> callback.BtnEnd()}'
                    android:text="@string/end_interview"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility='visible' />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>