<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ui.SectionBActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.uen_sosas.ui.SectionBActivity" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sosas_bg"
        android:layoutDirection="rtl"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/ll01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textView3Head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tdh" />

            <!--Radio Button Td01-->
            <android.support.v7.widget.CardView
                android:id="@+id/td01cv"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/labels"
                        android:text="@string/td01" />

                    <RadioGroup
                        android:id="@+id/td01"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/td01a"
                            style="@style/radiobutton"
                            android:text="@string/yes" />

                        <RadioButton
                            android:id="@+id/td01b"
                            style="@style/radiobutton"
                            android:text="@string/no" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--Edit Text Td02-->
            <android.support.v7.widget.CardView
                android:id="@+id/td02cv"
                style="@style/cardView"
                android:visibility='@{td01b.checked? View.GONE : View.VISIBLE}'>

                <LinearLayout
                    android:id="@+id/td02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/labels"
                        android:text="@string/td02" />


                    <EditText
                        android:id="@+id/td02a"
                        style="@style/textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/td02a"
                        android:inputType="number"
                        android:digits="123456789"
                        android:maxLength="1"
                        android:tag="td02a" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:onClick='@{() -> callback.BtnContinue()}'
                    android:text="@string/nextSection"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility='visible' />

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_light"
                    android:onClick='@{() -> callback.BtnEnd()}'
                    android:text="@string/end_interview"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility='visible' />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>