<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.SectionAActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.uen_sosas.ui.InfoActivity" />
    </data>

    <ScrollView
        android:id="@+id/svseca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/checkLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    style="@style/cardView"
                    android:elevation="10dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/i_textview"
                            android:text="Area"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@android:color/white" />

                        <Spinner
                            android:id="@+id/areaSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/cardView"
                    android:layout_marginTop="5dp"
                    android:elevation="10dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/ta06"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@android:color/white" />

                        <Spinner
                            android:id="@+id/villageSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginTop="10dp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/ta01"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@android:color/white" />


                        <TextView
                            android:id="@+id/clusterNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@android:color/black" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>


            <android.support.v7.widget.CardView style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.edittextpicker.aliazaz.EditTextPicker
                        android:id="@+id/hh_name"
                        style="@style/textInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="XXXX-X"
                        android:padding="10dp"
                        android:paddingLeft="10dp"
                        android:textAllCaps="true"
                        app:mask="####-#" />

                    <Button
                        android:id="@+id/checkHH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryBeta"
                        android:padding="24dp"
                        android:text="Check HouseHold"
                        android:textColor="@color/white" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/motherList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_child_list">

            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/fldGrpt03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!--9-->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/text_style"
                            android:text="@string/ta09"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@android:color/white" />

                        <RadioGroup
                            android:id="@+id/ta09"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/ta09a"
                                style="@style/radiobutton"
                                android:text="@string/yes" />

                            <RadioButton
                                android:id="@+id/ta09b"
                                style="@style/radiobutton"
                                android:text="@string/no" />

                            <RadioButton
                                android:id="@+id/ta09c"
                                style="@style/radiobutton"
                                android:text="@string/ta09c" />

                        </RadioGroup>
                    </LinearLayout>


                </android.support.v7.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_End"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/red"
                        android:padding="20dp"
                        android:text="@string/end_interview"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:visibility="@{ta09a.checked ? View.GONE : View.VISIBLE}" />

                    <Button
                        android:id="@+id/btn_Continue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/green"
                        android:padding="20dp"
                        android:text="@string/start_interview"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:visibility="@{ta09a.checked ? View.VISIBLE : View.GONE}" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>